cmake_minimum_required(VERSION 3.22)
project(posix LANGUAGES C ASM)
add_library(${PROJECT_NAME} INTERFACE)
set(AGGREGATED_INTERFACE "${PROJECT_NAME}")

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include("${REPO_PROJECTS}/setup.cmake")
    include("${REPO_PROJECTS}/print-configuration.cmake")
    add_link_options("--ld-path=${CMAKE_LINKER}")
    add_subproject("shared")
    add_subproject("platform-abstraction")
    # NOTE: This really shouldn't happen
    if("${ENVIRONMENT}" STREQUAL "freestanding")
        add_subproject("kernel")
    endif()
endif()

add_subdirectory(log)
add_subdirectory(file)
add_subdirectory(test-framework)
add_subdirectory(memory)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    fetch_and_write_project_targets()
endif()
