cmake_minimum_required(VERSION 3.22)
project(posix LANGUAGES C ASM)
set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
add_library(${AGGREGATED_INTERFACE} INTERFACE)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include("${REPO_PROJECTS}/setup.cmake")
    add_subproject("shared")
    add_subproject("abstraction/memory/manipulation")
    add_subproject("abstraction/log")
    include("${REPO_PROJECTS}/print-configuration.cmake")
endif()

add_subdirectory(log)
add_subdirectory(file)
add_subdirectory(test-framework)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    fetch_and_write_project_targets()
endif()
