cmake_minimum_required(VERSION 3.22)
project(shared LANGUAGES C ASM)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include(${REPO_PROJECTS}/setup.cmake)
    include(${REPO_PROJECTS}/print-configuration.cmake)
    add_link_options(--ld-path=${CMAKE_LINKER})
endif()

add_subdirectory(assert)
add_subdirectory(text)
add_subdirectory(memory)
add_subdirectory(log)
add_subdirectory(maths)
add_subdirectory(buffer)
add_subdirectory(hash)
add_subdirectory(dynamic-array)
add_subdirectory(types)
