cmake_minimum_required(VERSION 3.22)
project(shared LANGUAGES C ASM)
set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
add_library(${AGGREGATED_INTERFACE} INTERFACE)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include(${REPO_PROJECTS}/setup.cmake)
    include(${REPO_PROJECTS}/print-configuration.cmake)
    add_platform_abstraction_and_correct_implementations()
    add_subproject("efi-to-kernel")
endif()

add_subdirectory(assert)
add_subdirectory(text)
add_subdirectory(memory)
add_subdirectory(log)
add_subdirectory(maths)
add_subdirectory(buffer)
add_subdirectory(uuid)
add_subdirectory(hash)
add_subdirectory(dynamic-array)
add_subdirectory(types)
add_subdirectory(macros)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    fetch_and_write_project_targets()
endif()
