cmake_minimum_required(VERSION 3.22)
project(status LANGUAGES C)
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include("${REPO_PROJECTS}/setup.cmake")
    include("${REPO_PROJECTS}/print-configuration.cmake")
    add_link_options("--ld-path=${CMAKE_LINKER}")
    add_subproject("shared")
    add_subproject("x86")
    add_subproject("platform-abstraction")
    if("${FREESTANDING_BUILD}")
        add_subproject("kernel")
    else()
        add_subproject("posix")
    endif()
endif()

add_subdirectory(cpu)
