cmake_minimum_required(VERSION 3.22)
project(x86 LANGUAGES C ASM)
set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
add_library(${AGGREGATED_INTERFACE} INTERFACE)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include("${REPO_PROJECTS}/setup.cmake")
    include("${REPO_PROJECTS}/print-configuration.cmake")
    add_link_options("--ld-path=${CMAKE_LINKER}")
    add_subproject("shared")
    add_subproject("platform-abstraction")
    add_subproject("efi-to-kernel")
    if("${ENVIRONMENT}" STREQUAL "freestanding")
        add_subproject("kernel")
    elseif("${ENVIRONMENT}" STREQUAL "posix")
        add_subproject("posix")
    endif()
endif()

add_subdirectory(memory)
add_subdirectory(cpu)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    fetch_and_write_project_targets()
endif()
