cmake_minimum_required(VERSION 3.22)
project(x86 LANGUAGES C ASM)
set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
add_library(${AGGREGATED_INTERFACE} INTERFACE)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include("${REPO_PROJECTS}/setup.cmake")
    include("${REPO_PROJECTS}/print-configuration.cmake")
    add_subproject("shared")
    add_subproject("efi-to-kernel")
endif()

add_subdirectory(configuration)
add_subdirectory(memory)
add_subdirectory(fault)
add_subdirectory(idt)
add_subdirectory(gdt)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    fetch_and_write_project_targets()
endif()
