cmake_minimum_required(VERSION 3.22)
project(x86 LANGUAGES C ASM)
set(AGGREGATED_INTERFACE "${PROJECT_NAME}-i")
add_library(${AGGREGATED_INTERFACE} INTERFACE)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    include("${REPO_PROJECTS}/setup.cmake")
    add_project("shared")
    add_project("abstraction/memory/manipulation")
    add_project("abstraction/log")
    add_project("abstraction/interrupts")
    include("${REPO_PROJECTS}/print-configuration.cmake")
endif()

add_subdirectory(configuration)
add_subdirectory(memory)
add_subdirectory(fault)
add_subdirectory(idt)
add_subdirectory(gdt)

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    fetch_and_write_project_targets()
endif()
